correct scroll behavior, fix button cart visibility

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Dancing+Script:wght@700&family=Oswald:wght@200;300;400&family=Secular+One&display=swap');
 
-#goods {
-  width: 100%;
-  background-color: white;
-  height: 60px;
-}
-
 .menu {
   display: flex;
   justify-content: space-around;
@@ -49,6 +43,11 @@
 
 .hide {
   display: none;
+}
+
+.scrollable {
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 400px) and (max-width: 600px) {
